Fixed bottom-aligned circles problem in Chrome and IE
For both blog pagination and dates, when abs-pos and bottom-affixed,
the elements were gaining additional height (causing everything to
nudge upwards) because of spaces in-between inline block elements.
Setting the line-height of those phantom spaces to 0 solves the problem.

--- a/_src/sass/components/_date.scss
+++ b/_src/sass/components/_date.scss
@@ -20,8 +20,10 @@
     display: block;
     margin: 0;
     padding: 0;
-    text-align: center;
     z-index: 3;
+    text-align: center;
+    /* Fix misalignment in non-Safari browsers caused by inline-block */
+    line-height: 0;
 }
 
 .date-unit {
